--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="./packages/css/styles.css">
 
-        <title>Prashanna</title>
+        <title>T B S</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
